Update english translations for job subscriptions

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -220,7 +220,7 @@
   "input.personal.id.label": "Personal ID",
   "input.phone.label": "Phone",
   "input.phone.placeholder": "Phone",
-  "input.primary.occupations.label": "Choose job occupations that you are interested in",
+  "input.primary.occupations.label": "Choose occupations that you are interested in",
   "input.repeat.password.label": "Repeat password",
   "input.repeat.password.placeholder": "Repeat password",
   "input.residence.permit.back.description": "Back photo of my residence permit",
@@ -300,7 +300,7 @@
   "job.company.description.section.title": "Short about {{company}}",
   "job.description.section.header": "Description",
   "job.description.section.title": "About the job",
-  "job.digest.form.city.hint": "Choose a few cities if you only want to get notified by job openings close to them",
+  "job.digest.form.city.hint": "Choose one or a few cities to narrow your search",
   "job.digest.form.delete.button": "Delete",
   "job.digest.form.info": "Scroll down to see your active subscriptions",
   "job.digest.form.max.cities": "You can not add any more cities",
@@ -452,7 +452,7 @@
   "sort.users.input.option.oldest": "Oldest",
   "stepper.modal.next.button": "Next",
   "stepper.modal.previous.button": "Previous",
-  "subscribe.new.bottom_jobs_page_title": "Get notified when new jobs are available",
+  "subscribe.new.bottom_jobs_page_title": "Get notified when new jobs are posted",
   "subscribe.new.title": "New subscription",
   "subscribe.title": "Job subscriptions",
   "support.chat.info.message.description": "Please be aware that it may take up to 72 hours to get a response",
