--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,6 +1,6 @@
 {
   "already.registered.modal.button": "تسجيل الدخول",
-  "already.registered.modal.info": "يبدو أن هناك حسابا يستخدم {{emailOrPhone}}، لذا نقترح عليك تسجيل الدخول بدلا من ذلك. إذا نسيت كلمة المرور، فيمكنك إعادة تعيين كلمة المرور بالنقر على \"هل نسيت كلمة المرور؟\" في الاعلى",
+  "already.registered.modal.info": "يبدو أن هناك بالفعل حساب يستخدم {{EMAILORPHONE}}، لذلك فإننا نقترح عليك تسجيل الدخول بدلا من ذلك. إذا نسيت كلمة المرور، فيمكنك إعادة تعيين كلمة المرور بالنقر على \\\"هل نسيت كلمة المرور؟\\\" أدناه",
   "already.registered.modal.title": "{{emailOrPhone}} مسجل سابقاً",
   "application.item.applied": "لقد تقدمت لهذه الوظيفة.",
   "application.item.hired": "لقد تم توظيفك",
@@ -58,6 +58,10 @@
   "confirmation.password.reset.title": "تم تغيير كلمة السر بنجاح ",
   "confirmation.signed.for.job.description": "Just Arrived سوف تتواصل معك في أقرب وقت ممكن لذلك لا تنسى الرد على الهاتف الخاص بك والتحقق من رسائل البريد الإلكتروني",
   "confirmation.signed.for.job.title": "نحن نؤمن بك! Just Arrived واثق من أنك سوف تؤدي هذه المهمة بشكل استثنائي!",
+  "confirmation.subscribed.description": "We will send out notifications to your email containing relevant jobs according to your subscription!",
+  "confirmation.subscribed.title": "Thank you for subscribing!",
+  "confirmation.unsubscribed.description": "You will no longer get such job openings subcription emails.",
+  "confirmation.unsubscribed.title": "You have canceled the specified subscrition!",
   "contact.form.description": "أسئلة أو أفكار؟ نودّ المساعدة!",
   "contact.form.instruction": "اِملأ معلوماتك في الأسفل",
   "contact.form.submit.button": "إرسال",
@@ -138,12 +142,16 @@
   "how.it.works.section.update.profile.description.title": "2. تحديث الملف الشخصي",
   "input.account.number.label": "رقم البطاقة",
   "input.account.number.placeholder": "رقم البطاقة",
+  "input.address.autocomplete.label": "العنوان",
+  "input.address.autocomplete.placeholder": "العنوان",
   "input.apply.message.label": "رسائل اضافية",
   "input.apply.message.placeholder": "رسائل اضافية",
   "input.at.und.label": "هل لديك تصريح AT-UND؟ (مسموح بالعمل أثناء اللجوء)",
   "input.bank.account.label": "حساب مصرفي سويدي (رقم المقاصة + رقم الحساب)",
   "input.bank.account.placeholder": "الحساب المصرفي",
   "input.chat.message.placeholder": "اكتب رسالة",
+  "input.city.autocomplete.label": "المدينة",
+  "input.city.autocomplete.placeholder": "المدينة",
   "input.city.label": "المدينة",
   "input.city.placeholder": "المدينة",
   "input.comment.placeholder": "أكتب تعليقك",
@@ -185,6 +193,8 @@
   "input.interests.hint": "يرجى تقييم مدى اهتمامك في الإهتمامات التي تم اختيارها",
   "input.interests.label": "الإهتمامات",
   "input.interests.placeholder": "الإهتمامات",
+  "input.job.digest.notification.frequency.label": "How often do you want to be notified of new jobs?",
+  "input.job.digest.notification.frequency.placeholder": "Notification Frequency",
   "input.job.experience.label": "خبرة سنوات العمل",
   "input.job.experience.placeholder": "خبرة سنوات العمل",
   "input.languages.hint": "يرجى تقييم نفسك في أداء اللغات المختارة",
@@ -210,6 +220,7 @@
   "input.personal.id.label": "رقم الهوية الشخصي",
   "input.phone.label": "هاتف",
   "input.phone.placeholder": "هاتف",
+  "input.primary.occupations.label": "Choose occupations that you are interested in",
   "input.repeat.password.label": "تكرار كلمة المرور",
   "input.repeat.password.placeholder": "تكرار كلمة المرور",
   "input.residence.permit.back.description": "تحميل الصورة الخلفية لتصريح الإقامة",
@@ -289,6 +300,16 @@
   "job.company.description.section.title": "نبذة عن {{company}}",
   "job.description.section.header": "وصف",
   "job.description.section.title": "عن الوظيفة",
+  "job.digest.form.city.hint": "Choose one or a few cities to narrow your search",
+  "job.digest.form.city.add": "Add city",
+  "job.digest.form.delete.button": "Delete",
+  "job.digest.form.info": "Scroll down to see your active subscriptions",
+  "job.digest.form.max.cities": "You can not add any more cities",
+  "job.digest.form.submit.button": "Subscribe",
+  "job.digest.form.update.button": "Update",
+  "job.digests.pager.section.empty": "You have no active subscriptions",
+  "job.digests.pager.section.subscription.title": "Subscription {{subscriptionNumber}}",
+  "job.digests.pager.section.title": "My active subscriptions",
   "job.important.information.section.address.title": "العنوان",
   "job.important.information.section.employer.title": "صاحب العمل",
   "job.important.information.section.hours": "{{hours}} الساعات",
@@ -349,6 +370,7 @@
   "menu.main.my_assignment": "My Applications",
   "menu.main.profile": "صفحة معلومات شخصية",
   "menu.main.register": "إنشاء حساب",
+  "menu.main.subscriptions": "Job subscriptions",
   "menu.main.staffing_time_report": "تقرير الوقت",
   "menu.main.support.chat": "تحدث مع Just Arrived",
   "meta.404.description": "عذرا، الصفحة أو المورد الذي تبحث عنه غير موجود.",
@@ -431,18 +453,21 @@
   "sort.users.input.option.oldest": "Oldest",
   "stepper.modal.next.button": "التالي",
   "stepper.modal.previous.button": "Previous",
+  "subscribe.new.bottom_jobs_page_title": "Get notified when new jobs are posted",
+  "subscribe.new.title": "New subscription",
+  "subscribe.title": "Job subscriptions",
   "support.chat.info.message.description": "يرجى العلم بأنه قد يستغرق الأمر ما يصل إلى 72 ساعة للحصول على رد",
   "support.chat.info.message.header": "هذه ليست خدمة الدردشة الفورية",
   "support.chat.page.title": "تحدث مع Just Arrived",
   "support.chat.title": "جست أرايفد",
   "terms.frilans_finans.accept": "أنا اوفق على Frilans Finans",
   "terms": "الشروط والأحكام وعقد العمل",
-  "update-profile-step-2-modal-header": "Choose your skills",
   "update-profile-step-1-modal-header": "تحميل سيرتك الذاتية",
+  "update-profile-step-2-modal-header": "Choose your skills",
   "update-profile-step-3-modal-description": "Upload a profile picture",
   "update-profile-step-3-modal-header": "Upload a profile picture",
   "update-profile-step-4-modal-description": "You have successfully increased your chances to get a job!",
-  "update-profile-step-4-modal-find-jobs-button": "Find a job",
+  "update-profile-step-4-modal-find-jobs-button": "إيجاد وظيفة",
   "update-profile-step-4-modal-header": "Thank you",
   "update-profile-step-4-modal-profile-button": "صفحة معلومات شخصية",
   "update-profile-step-4-modal-sub-description": "Under your profile you can provide additional information that we are insterested in or just go ahead and find a job!",
@@ -510,7 +535,7 @@
   "welcome-step-2-modal-point-3": "We believe in you!",
   "welcome-step-2-modal-title": "Why You?",
   "welcome-step-3-modal-description": "The next step is to update your profile in order to increase your chances to get a job.",
-  "welcome-step-3-modal-find-jobs-button": "Find a job",
+  "welcome-step-3-modal-find-jobs-button": "إيجاد وظيفة",
   "welcome-step-3-modal-title": "أهلا بك في Just Arrived!",
   "welcome-step-3-modal-update-profile-button": "Update profile"
 }
