Added next and previous text to fixed pager

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,12 +1,4 @@
 {
-  "hint.pager.previous": "Previous",
-  "hint.pager.next": "Next",
-  "guide.menu.title": "Job guide",
-  "guide.card.welcome.button": "Start",
-  "guide.card.welcome.paragraph.2": "The guide consists of 3 parts:",
-  "guide.card.welcome.paragraph.1": "Are you new in Sweden and not sure what to do when searching for a job? In this guide we have collected information and tips that will help you.",
-  "guide.card.welcome.faded.title": "Job guide",
-  "guide.card.welcome.title": "Welcome to the job guide",
   "already.registered.modal.button": "Log in",
   "already.registered.modal.info": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" above",
   "already.registered.modal.title": "{{emailOrPhone}} is already registered",
@@ -83,6 +75,8 @@
   "error.title": "An error occured!",
   "faq.answer.label": "Answers",
   "faq.title": "Questions and answers",
+  "fixed.bottom.menu.pager.next": "Next",
+  "fixed.bottom.menu.pager.previous": "Previous",
   "footer.about.us.section.careers": "Careers",
   "footer.about.us.section.faq": "FAQ",
   "footer.about.us.section.just.arrived": "About Just Arrived",
@@ -108,6 +102,14 @@
   "god.mode.deactivate.button": "Deactivate",
   "god.mode.pager.section.no.users": "No users found",
   "god.mode.title": "{{numberOfUsers}} Users",
+  "guide.card.welcome.button": "Start",
+  "guide.card.welcome.faded.title": "Job guide",
+  "guide.card.welcome.paragraph.1": "Are you new in Sweden and not sure what to do when searching for a job? In this guide we have collected information and tips that will help you.",
+  "guide.card.welcome.paragraph.2": "The guide consists of 3 parts:",
+  "guide.card.welcome.title": "Welcome to the job guide",
+  "guide.menu.title": "Job guide",
+  "hint.pager.next": "Next",
+  "hint.pager.previous": "Previous",
   "home.header.logged.in.jobs.button": "Find jobs",
   "home.header.logged.in.profile.button": "Edit profile",
   "home.header.logged.in.title": "Welcome {{username}}!",
