--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,10 @@
 {
+  "guide.card.welcome.item.1.title": "Before you apply for jobs",
+  "guide.card.welcome.item.1.paragraph": "What do you need to work in Sweden?",
+  "guide.card.welcome.item.2.title": "How to apply for jobs",
+  "guide.card.welcome.item.2.paragraph": "Advice on how to find a job, how to write a resume and what you should think about when signing a contract.",
+  "guide.card.welcome.item.3.title": "At the job",
+  "guide.card.welcome.item.3.paragraph": "Practical information on what to expect when you start working.",
   "already.registered.modal.button": "Log in",
   "already.registered.modal.info": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" above",
   "already.registered.modal.title": "{{emailOrPhone}} is already registered",
