Update how-it-works section button placement

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -130,6 +130,7 @@
   "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
   "home.partners.title": "Our partners",
   "how.it.works.section.create.accont.button": "Create account",
+  "how.it.works.section.create.subscriptions.button": "Job subscriptions",
   "how.it.works.section.find.jobs.description.paragraph.1": "Now it is time to begin job searching!",
   "how.it.works.section.find.jobs.description.paragraph.2": "Apply for any and as many jobs you want! Don’t forget to sign in often to see if we have posted any new jobs!",
   "how.it.works.section.find.jobs.description.title": "3. Find jobs",
