Add guide section to home page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -419,6 +419,12 @@
   "section.employer_pitch.title": "Vi hjälper dig att hitta ny kompetens",
   "section.employer_pitch.body": "Snabbt, enkelt och tryggt! Vi har ett stort nätverk av nyanlända kandidater. Självklart valideras kompetens erfarenhet och språkkunskaper för en bra matchning.",
   "section.employer_pitch.read_more.button": "Read more",
+  "section.guide_pitch.title": "What do I need to know?",
+  "section.guide_pitch.body": "In our guide you will find information, tips & tricks about:",
+  "section.guide_pitch.guide.button": "Goto guide",
+  "section.guide_pitch.content_example.first": "What you need in order to work in Sweden",
+  "section.guide_pitch.content_example.second": "How and where you apply for a job.",
+  "section.guide_pitch.content_example.third": "How the Swedish labour market works.",
   "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
   "register.form.login.button": "Log in now",
