--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -419,6 +419,8 @@
   "section.employer_pitch.title": "Vi hjälper dig att hitta ny kompetens",
   "section.employer_pitch.body": "Snabbt, enkelt och tryggt! Vi har ett stort nätverk av nyanlända kandidater. Självklart valideras kompetens erfarenhet och språkkunskaper för en bra matchning.",
   "section.employer_pitch.read_more.button": "Read more",
+  "section.employer_match_pitch.title": "It should be simple for employers and future employees to meet.",
+  "section.employer_match_pitch.read_more.button": "Read more",
   "section.guide_pitch.title": "What do I need to know?",
   "section.guide_pitch.body": "In our guide you will find information, tips & tricks about:",
   "section.guide_pitch.guide.button": "Goto guide",
