Add /about-us page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -412,6 +412,14 @@
   "meta.user.profile.title": "Your profile",
   "missing.payment.information.modal.button": "Continue",
   "missing.payment.information.modal.title": "In order to get payed you need to provide the following missing information",
+  "section.about_us_statement.body": "Vi vill ta  tillvara på den kompetens och erfarenhet som nyanlända kommer med. Vi är övertygade om att det är vägen till att bygga bättre affärer, bättre organisationer och ett bättre samhälle.",
+  "section.about_us_simple_matching.title": "Det ska vara enkelt för nyanlända och arbetsgivare att mötas.",
+  "section.about_us_simple_matching.body": "Det är där Just Arrived kommer in. Vi matchar nyanlända kandidater med uppdrag hos arbetsgivare i Sverige. Naturligtvis med schyssta villkor för alla parter. Vi har kollektivavtal genom Almega Bemanningsföretagen.Trygghet oavsett om du är kund eller kandidat.",
+  "section.about_us_win_win.title": "Win-win har sällan varit enklare!",
+  "section.about_us_win_win.body": "Du får hjälp utifrån dina behov. Nyanlända får möjlighet starta sitt arbetsliv i Sverige. ",
+  "section.company_history.title": "Igår, idag och imorgon",
+  "section.company_history.body_first": "Grunden till Just Arrived lades hösten 2015 i samband med den ökade flyktingströmmen. Sedan 2016 drivs Just Arrived som ett aktiebolag där huvudparten av ägarna är stiftelser, bland annat Norrsken Foundation och Diversify Foundation.",
+  "section.company_history.body_second": "Tillsammans med våra kunder gör vi varje dag skillnad i människors liv genom att erbjuda en väg in till arbetsmarknaden. Vi ser fram emot att fortsätta det arbetet i allt större format.",
   "section.newcomer_pitch.title": "Ta första steget in på arbetsmarknaden i Sverige",
   "section.newcomer_pitch.body": "Just Arrived matchar dig som är nyanländ med arbetsgivare som behöver din kunskap och erfarenhet.",
   "section.newcomer_pitch.register.button": "Register profile",
