Add company newsletter section

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -420,6 +420,9 @@
   "section.company_history.title": "Igår, idag och imorgon",
   "section.company_history.body_first": "Grunden till Just Arrived lades hösten 2015 i samband med den ökade flyktingströmmen. Sedan 2016 drivs Just Arrived som ett aktiebolag där huvudparten av ägarna är stiftelser, bland annat Norrsken Foundation och Diversify Foundation.",
   "section.company_history.body_second": "Tillsammans med våra kunder gör vi varje dag skillnad i människors liv genom att erbjuda en väg in till arbetsmarknaden. Vi ser fram emot att fortsätta det arbetet i allt större format.",
+  "section.company_newsletter.header": "Just Arrived Newsletter",
+  "section.company_newsletter.body": "Learn how to build a better business with the help of employees that are new in Sweden. You can of course unsubscribe anytime.",
+  "section.company_newsletter.subscribe": "Subscribe",
   "section.newcomer_pitch.title": "Ta första steget in på arbetsmarknaden i Sverige",
   "section.newcomer_pitch.body": "Just Arrived matchar dig som är nyanländ med arbetsgivare som behöver din kunskap och erfarenhet.",
   "section.newcomer_pitch.register.button": "Register profile",
