Add missing I18n to basic-user-data.component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,6 +22,7 @@
   "back.to.jobs.section.link": "Find more jobs",
   "basic.chat.messages.empty": "No messages yet",
   "basic.comments.empty": "No comments yet",
+  "basic_user.data.tab_title": "Basic",
   "button.form.submit.fail": "There are some errors, please review them above.",
   "button.form.submit.success": "Success!",
   "card.document.upload.empty.documents": "Empty",
