Pull sv translations from Transifex

--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -1,4 +1,10 @@
 {
+  "guide.card.welcome.item.1.title": "Innan du söker jobb",
+  "guide.card.welcome.item.1.paragraph": "Vad behöver du för att jobba i Sverige?",
+  "guide.card.welcome.item.2.title": "Hur du söker jobb",
+  "guide.card.welcome.item.2.paragraph": "Tips på hur du hittar jobb, hur du skriver ett CV och vad du ska tänka på när du skriver på ett kontrakt.",
+  "guide.card.welcome.item.3.title": "På jobbet",
+  "guide.card.welcome.item.3.paragraph": "Praktisk information om vad du kan förvänta dig när du börja jobba.",
   "already.registered.modal.button": "Logga in",
   "already.registered.modal.info": "Det verkar som att det redan finns ett konto som använder {{emailOrPhone}}, så vi föreslår att du loggar in istället. Om du glömt ditt lösenord så kan du återställa det genom att klicka på \"Glömt ditt lösenord?\" ovan",
   "already.registered.modal.title": "{{emailOrPhone}} är redan registrerat",
@@ -22,6 +28,7 @@
   "back.to.jobs.section.link": "Hitta fler jobb",
   "basic.chat.messages.empty": "Inga meddelanden ännu",
   "basic.comments.empty": "Inga kommentarer ännu",
+  "basic_user.data.tab_title": "Grundläggande",
   "button.form.submit.fail": "Det finns några fel du måste åtgärda ovan.",
   "button.form.submit.success": "Det gick bra!",
   "card.document.upload.empty.documents": "Tomt",
@@ -75,6 +82,8 @@
   "error.title": "Ett fel uppstod!",
   "faq.answer.label": "Svar",
   "faq.title": "Frågor och svar",
+  "fixed.bottom.menu.pager.next": "Nästa",
+  "fixed.bottom.menu.pager.previous": "Föregående",
   "footer.about.us.section.careers": "Karriär",
   "footer.about.us.section.faq": "FAQ",
   "footer.about.us.section.just.arrived": "Om Just Arrived",
@@ -100,6 +109,14 @@
   "god.mode.deactivate.button": "Deaktivera",
   "god.mode.pager.section.no.users": "Inga användare hittades",
   "god.mode.title": "{{numberOfUsers}} Användare",
+  "guide.card.welcome.button": "Starta",
+  "guide.card.welcome.faded.title": "Jobbguide",
+  "guide.card.welcome.paragraph.1": "Är du ny i Sverige och inte säker på vad du ska göra när du söker jobb? I den här guiden har vi samlat information, samt tips och tricks som kommer hjälpa dig.",
+  "guide.card.welcome.paragraph.2": "Guiden består av 3 delar:",
+  "guide.card.welcome.title": "Välkommen till jobbguiden",
+  "guide.menu.title": "Jobbguide",
+  "hint.pager.next": "Nästa",
+  "hint.pager.previous": "Föregående",
   "home.header.logged.in.jobs.button": "Hitta jobb",
   "home.header.logged.in.profile.button": "Redigera profil",
   "home.header.logged.in.title": "Välkommen {{username}}!",
