--- a/src/assets/i18n/ps.json
+++ b/src/assets/i18n/ps.json
@@ -1,4 +1,10 @@
 {
+  "guide.card.welcome.item.1.title": "Before you apply for jobs",
+  "guide.card.welcome.item.1.paragraph": "What do you need to work in Sweden?",
+  "guide.card.welcome.item.2.title": "How to apply for jobs",
+  "guide.card.welcome.item.2.paragraph": "Advice on how to find a job, how to write a resume and what you should think about when signing a contract.",
+  "guide.card.welcome.item.3.title": "At the job",
+  "guide.card.welcome.item.3.paragraph": "Practical information on what to expect when you start working.",
   "already.registered.modal.button": "ننوتل",
   "already.registered.modal.info": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" above",
   "already.registered.modal.title": "{{emailOrPhone}} is already registered",
@@ -22,6 +28,7 @@
   "back.to.jobs.section.link": "Find more jobs",
   "basic.chat.messages.empty": "No messages yet",
   "basic.comments.empty": "No comments yet",
+  "basic_user.data.tab_title": "Basic",
   "button.form.submit.fail": "There are some errors, please review them above.",
   "button.form.submit.success": "Success!",
   "card.document.upload.empty.documents": "Empty",
@@ -75,6 +82,8 @@
   "error.title": "An error occured!",
   "faq.answer.label": "Svar",
   "faq.title": "پوښتنې او ځوابونه",
+  "fixed.bottom.menu.pager.next": "Next",
+  "fixed.bottom.menu.pager.previous": "Previous",
   "footer.about.us.section.careers": "Careers",
   "footer.about.us.section.faq": "FAQ",
   "footer.about.us.section.just.arrived": "About Just Arrived",
@@ -100,6 +109,14 @@
   "god.mode.deactivate.button": "Deactivate",
   "god.mode.pager.section.no.users": "No users found",
   "god.mode.title": "{{numberOfUsers}} Users",
+  "guide.card.welcome.button": "Start",
+  "guide.card.welcome.faded.title": "Job guide",
+  "guide.card.welcome.paragraph.1": "Are you new in Sweden and not sure what to do when searching for a job? In this guide we have collected information and tips that will help you.",
+  "guide.card.welcome.paragraph.2": "The guide consists of 3 parts:",
+  "guide.card.welcome.title": "Welcome to the job guide",
+  "guide.menu.title": "Job guide",
+  "hint.pager.next": "Next",
+  "hint.pager.previous": "Previous",
   "home.header.logged.in.jobs.button": "د ګومارنې موندل",
   "home.header.logged.in.profile.button": "Edit profile",
   "home.header.logged.in.title": "Welcome {{username}}!",
