--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,4 +1,10 @@
 {
+  "guide.card.welcome.item.1.title": "Before you apply for jobs",
+  "guide.card.welcome.item.1.paragraph": "What do you need to work in Sweden?",
+  "guide.card.welcome.item.2.title": "How to apply for jobs",
+  "guide.card.welcome.item.2.paragraph": "Advice on how to find a job, how to write a resume and what you should think about when signing a contract.",
+  "guide.card.welcome.item.3.title": "At the job",
+  "guide.card.welcome.item.3.paragraph": "Practical information on what to expect when you start working.",
   "already.registered.modal.button": "تسجيل الدخول",
   "already.registered.modal.info": "يبدو أن هناك بالفعل حساب يستخدم {{EMAILORPHONE}}، لذلك فإننا نقترح عليك تسجيل الدخول بدلا من ذلك. إذا نسيت كلمة المرور، فيمكنك إعادة تعيين كلمة المرور بالنقر على \\\"هل نسيت كلمة المرور؟\\\" أدناه",
   "already.registered.modal.title": "{{emailOrPhone}} مسجل سابقاً",
@@ -22,6 +28,7 @@
   "back.to.jobs.section.link": "ابحث عن وظائف اخرى",
   "basic.chat.messages.empty": "لا توجد رسائل حتى الآن",
   "basic.comments.empty": "لا توجد تعليقات حتى الآن",
+  "basic_user.data.tab_title": "Basic",
   "button.form.submit.fail": "توجد بعض الأخطاء، يُرجى مراجعتها أعلاه.",
   "button.form.submit.success": "تم بنجاح!",
   "card.document.upload.empty.documents": "فارغ",
@@ -75,6 +82,8 @@
   "error.title": "حدث خطأ!",
   "faq.answer.label": "جواب",
   "faq.title": "أسئلة وأجوبة",
+  "fixed.bottom.menu.pager.next": "التالي",
+  "fixed.bottom.menu.pager.previous": "Previous",
   "footer.about.us.section.careers": "وظائف",
   "footer.about.us.section.faq": "FAQ",
   "footer.about.us.section.just.arrived": "عن JustArrived",
@@ -100,6 +109,14 @@
   "god.mode.deactivate.button": "تعطيل",
   "god.mode.pager.section.no.users": "المستخدم غير موجود",
   "god.mode.title": "{{numberOfUsers}} مستخدمين",
+  "guide.card.welcome.button": "Start",
+  "guide.card.welcome.faded.title": "Job guide",
+  "guide.card.welcome.paragraph.1": "Are you new in Sweden and not sure what to do when searching for a job? In this guide we have collected information and tips that will help you.",
+  "guide.card.welcome.paragraph.2": "The guide consists of 3 parts:",
+  "guide.card.welcome.title": "Welcome to the job guide",
+  "guide.menu.title": "Job guide",
+  "hint.pager.next": "التالي",
+  "hint.pager.previous": "Previous",
   "home.header.logged.in.jobs.button": "إيجاد وظيفة",
   "home.header.logged.in.profile.button": "تحرير ملف التعريف",
   "home.header.logged.in.title": "مرحبًا {{username}}!",
