Also added the email suggestion functionality to email or phone input

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -185,6 +185,8 @@
   "input.email.label": "Email",
   "input.email.or.phone.label": "Email or phone",
   "input.email.or.phone.placeholder": "Email or phone",
+  "input.email.or.phone.suggestion.hint": "Did you mean {{email}}?",
+  "input.email.or.phone.suggestion.link": "Click here to use this email",
   "input.email.placeholder": "Email",
   "input.email.suggestion.hint": "Did you mean {{email}}?",
   "input.email.suggestion.link": "Click here to use this email",
