Pull arabic locale translations from Transifex

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,10 +1,10 @@
 {
-  "guide.card.welcome.item.1.title": "Before you apply for jobs",
-  "guide.card.welcome.item.1.paragraph": "What do you need to work in Sweden?",
-  "guide.card.welcome.item.2.title": "How to apply for jobs",
-  "guide.card.welcome.item.2.paragraph": "Advice on how to find a job, how to write a resume and what you should think about when signing a contract.",
-  "guide.card.welcome.item.3.title": "At the job",
-  "guide.card.welcome.item.3.paragraph": "Practical information on what to expect when you start working.",
+  "guide.card.welcome.item.1.title": "قبل أن تتقدم على وظيفة",
+  "guide.card.welcome.item.1.paragraph": "ماذا تحتاج للعمل في السويد؟",
+  "guide.card.welcome.item.2.title": "كيفية القديم على وظيفة",
+  "guide.card.welcome.item.2.paragraph": "نصائح حول كيفية العثور على وظيفة، وكيفية كتابة السيرة الذاتية وما يجب عليك التفكير به عند توقيع العقد.",
+  "guide.card.welcome.item.3.title": "في الوظيفة",
+  "guide.card.welcome.item.3.paragraph": "معلومات عملية حول ما يمكن توقعه عند بدء العمل.",
   "already.registered.modal.button": "تسجيل الدخول",
   "already.registered.modal.info": "يبدو أن هناك بالفعل حساب يستخدم {{EMAILORPHONE}}، لذلك فإننا نقترح عليك تسجيل الدخول بدلا من ذلك. إذا نسيت كلمة المرور، فيمكنك إعادة تعيين كلمة المرور بالنقر على \\\"هل نسيت كلمة المرور؟\\\" أدناه",
   "already.registered.modal.title": "{{emailOrPhone}} مسجل سابقاً",
@@ -13,7 +13,7 @@
   "application.item.offered": "الشركة ترغب في توظيفك",
   "application.item.rejected": "لقد حصل شخص اخر على الوظيفة",
   "application.item.withdrawn": "تم سحب الطلب",
-  "applications.pager.section.no.applications": "No applications yet",
+  "applications.pager.section.no.applications": "لا توجد طلبات حتى الآن",
   "applications.title": "جست أرايفد",
   "apply.for.job.form.message.section": "هل هناك لمور أخرى تريد معرفتها؟",
   "apply.for.job.form.submit.button": "التسجيل",
@@ -28,7 +28,7 @@
   "back.to.jobs.section.link": "ابحث عن وظائف اخرى",
   "basic.chat.messages.empty": "لا توجد رسائل حتى الآن",
   "basic.comments.empty": "لا توجد تعليقات حتى الآن",
-  "basic_user.data.tab_title": "Basic",
+  "basic_user.data.tab_title": "أساسي",
   "button.form.submit.fail": "توجد بعض الأخطاء، يُرجى مراجعتها أعلاه.",
   "button.form.submit.success": "تم بنجاح!",
   "card.document.upload.empty.documents": "فارغ",
@@ -65,10 +65,10 @@
   "confirmation.password.reset.title": "تم تغيير كلمة السر بنجاح ",
   "confirmation.signed.for.job.description": "Just Arrived سوف تتواصل معك في أقرب وقت ممكن لذلك لا تنسى الرد على الهاتف الخاص بك والتحقق من رسائل البريد الإلكتروني",
   "confirmation.signed.for.job.title": "نحن نؤمن بك! Just Arrived واثق من أنك سوف تؤدي هذه المهمة بشكل استثنائي!",
-  "confirmation.subscribed.description": "We will send out notifications to your email containing relevant jobs according to your subscription!",
-  "confirmation.subscribed.title": "Thank you for subscribing!",
-  "confirmation.unsubscribed.description": "You will no longer get such job openings subcription emails.",
-  "confirmation.unsubscribed.title": "You have canceled the specified subscrition!",
+  "confirmation.subscribed.description": "سوف نرسل الإخطارات إلى البريد الإلكتروني الخاص بك تحتوي على الوظائف ذات الصلة وفقا لاشتراكك!",
+  "confirmation.subscribed.title": "شكرا لك على الاشتراك!",
+  "confirmation.unsubscribed.description": "لن تحصل على مثل هذه الوظائف على  البريد الإلكتروني المشترك به.",
+  "confirmation.unsubscribed.title": "لقد ألغيت الاشتراك المحدد!",
   "contact.form.description": "أسئلة أو أفكار؟ نودّ المساعدة!",
   "contact.form.instruction": "اِملأ معلوماتك في الأسفل",
   "contact.form.submit.button": "إرسال",
@@ -83,9 +83,9 @@
   "faq.answer.label": "جواب",
   "faq.title": "أسئلة وأجوبة",
   "fixed.bottom.menu.pager.next": "التالي",
-  "fixed.bottom.menu.pager.previous": "Previous",
+  "fixed.bottom.menu.pager.previous": "السابق",
   "footer.about.us.section.careers": "وظائف",
-  "footer.about.us.section.faq": "FAQ",
+  "footer.about.us.section.faq": "التعليمات",
   "footer.about.us.section.just.arrived": "عن JustArrived",
   "footer.about.us.section.press": "اضغط",
   "footer.about.us.section.title": "عن JustArrived",
@@ -109,21 +109,21 @@
   "god.mode.deactivate.button": "تعطيل",
   "god.mode.pager.section.no.users": "المستخدم غير موجود",
   "god.mode.title": "{{numberOfUsers}} مستخدمين",
-  "guide.card.welcome.button": "Start",
-  "guide.card.welcome.faded.title": "Job guide",
-  "guide.card.welcome.paragraph.1": "Are you new in Sweden and not sure what to do when searching for a job? In this guide we have collected information and tips that will help you.",
-  "guide.card.welcome.paragraph.2": "The guide consists of 3 parts:",
-  "guide.card.welcome.title": "Welcome to the job guide",
-  "guide.menu.title": "Job guide",
+  "guide.card.welcome.button": "البدء",
+  "guide.card.welcome.faded.title": "دليل الوظائف",
+  "guide.card.welcome.paragraph.1": "هل أنت جديد في السويد وغير متأكد مما يجب القيام به عند البحث عن وظيفة؟ في هذا الدليل قمنا بجمع المعلومات والنصائح التي سوف تساعدك.",
+  "guide.card.welcome.paragraph.2": "يتكون الدليل من 3 أجزاء:",
+  "guide.card.welcome.title": "مرحبا بك في دليل الوظائف",
+  "guide.menu.title": "دليل الوظائف",
   "hint.pager.next": "التالي",
-  "hint.pager.previous": "Previous",
+  "hint.pager.previous": "السابق",
   "home.header.logged.in.jobs.button": "إيجاد وظيفة",
   "home.header.logged.in.profile.button": "تحرير ملف التعريف",
   "home.header.logged.in.title": "مرحبًا {{username}}!",
-  "home.header.logged.out.description": "Just Arrived helps you get the credentials you need to enter the Swedish labour market by matching you with Swedish companies. Right now Just Arrived mediates jobs in Stockholm, Gothenburg and Malmö. Create an account to get started!",
+  "home.header.logged.out.description": "Just Arrived سيساعدك على الحصول على أوراق الإعتماد التي تحتاجها لدخول سوق العمل السويدي عن طريق مطابقتك مع الشركات السويدية. حالياً Just Arrived يستطيع ايجاد وظائف في ستوكهولم ويوتيبوري ومالمو. قم بإنشاء حساب للبدء!",
   "home.header.logged.out.login.button": "تسجيل الدخول",
   "home.header.logged.out.register.button": "إنشاء حساب",
-  "home.header.logged.out.sub.title": "Get the experience you need to enter the Swedish labour market",
+  "home.header.logged.out.sub.title": "احصل على الخبرة التي تحتاجها لدخول سوق العمل السويدي",
   "home.header.logged.out.title": "مرحبًا!",
   "home.instructions.first.section.instruction0": "سجل دخولك او قم بتسجيل حساب جديد",
   "home.instructions.first.section.instruction1": "فتش على عمل بالقرب منك",
@@ -142,7 +142,7 @@
   "home.jobs.slider.user.jobs.job.offered.label": "معروض",
   "home.jobs.slider.user.jobs.job.rejected.label": "غير موظف",
   "home.jobs.slider.user.jobs.job.withdrawn.label": "سحب",
-  "home.jobs.slider.user.jobs.title": "My Applications",
+  "home.jobs.slider.user.jobs.title": "طلباتي",
   "home.jobs.slider.user.jobs.will.perform.label": "تمّ تعيينه",
   "home.partners.description": "Just Arrived عبارة عن مبادرة مجانية مشتركة تم ابتكارها للمساعدة في إلحاق المهاجرين الذين وصلوا مؤخرًا بسوق العمل السويدي. وهذه المبادرة تمتلكها إحدى المؤسسات ويتولى إدارتها اتحاد شركات.",
   "home.partners.title": "شركاؤنا",
@@ -152,10 +152,10 @@
   "how.it.works.section.find.jobs.description.title": "3. ابحث عن وظائف",
   "how.it.works.section.jobs.button": "تعرف على الوظائف لدينا",
   "how.it.works.section.register.description.paragraph.1": "انشئ حسابك لدى JustArrived",
-  "how.it.works.section.register.description.paragraph.2": "The registration form takes one minute to complete and is open for all newcomers and asylum seekers. You will also receive news and updates from Just Arrived after registration.",
+  "how.it.works.section.register.description.paragraph.2": "استمارة التسجيل تستغرق دقيقة واحدة لإكمالها وهي مفتوحة لجميع القادمين الجدد وطالبي اللجوء. سوف تتلقى أيضا الأخبار والتحديثات من Just Arrived بعد التسجيل.",
   "how.it.works.section.register.description.title": "1. انشاء حساب",
-  "how.it.works.section.update.profile.description.paragraph.1": "This is the most important thing to increase your chances of getting any job through Just Arrived!",
-  "how.it.works.section.update.profile.description.paragraph.2": "Make sure to fill in every relevant piece of information and all your skills. If your profile is empty you won’t be matched with any jobs.",
+  "how.it.works.section.update.profile.description.paragraph.1": "هذا هو أهم شيء لزيادة فرصك في الحصول على أي وظيفة من خلال Just Arrived!",
+  "how.it.works.section.update.profile.description.paragraph.2": "تأكد من ملء كل معلومة ذات صلة من المعلومات وجميع المهارات الخاصة بك. إذا كان ملفك الشخصي فارغ لن تتمكن من المطابقة مع أي وظيفة.",
   "how.it.works.section.update.profile.description.title": "2. تحديث الملف الشخصي",
   "input.account.number.label": "رقم البطاقة",
   "input.account.number.placeholder": "رقم البطاقة",
@@ -188,17 +188,17 @@
   "input.email.placeholder": "بريد إلكتروني",
   "input.facebook.url.label": "رابط حسابك على فيسبوك",
   "input.facebook.url.placeholder": "حساب فيسبوك",
-  "input.filter.jobs.label": "Filter on",
-  "input.filter.jobs.option.all": "All jobs",
-  "input.filter.jobs.option.filled": "Filled jobs",
-  "input.filter.jobs.option.open": "Open for applications",
-  "input.filter.jobs.option.unfilled": "Unfilled jobs",
-  "input.filter.jobs.placeholder": "Filter on",
+  "input.filter.jobs.label": "التصفية على",
+  "input.filter.jobs.option.all": "كل الوظائف",
+  "input.filter.jobs.option.filled": "الوظائف المشغولة",
+  "input.filter.jobs.option.open": "مفتوح حاليا لأي طلبات",
+  "input.filter.jobs.option.unfilled": "وظائف شاغرة",
+  "input.filter.jobs.placeholder": "التصفية على",
   "input.filter.users.label": "البحث عن طريق",
   "input.filter.users.option.email": "بريد إلكتروني",
-  "input.filter.users.option.first.name": "First Name",
-  "input.filter.users.option.id": "Id",
-  "input.filter.users.option.last.name": "Last Name",
+  "input.filter.users.option.first.name": "الإسم الأول",
+  "input.filter.users.option.id": "الهوية",
+  "input.filter.users.option.last.name": "الإسم الأخير",
   "input.filter.users.placeholder": "البحث عن طريق",
   "input.first.name.label": "الاسم الصغير",
   "input.first.name.placeholder": "الاسم الصغير",
@@ -207,11 +207,13 @@
   "input.gender.label": "الجنس",
   "input.gender.placeholder": "الجنس",
   "input.got.coordination.number.label": "هل لديك رقم التنسيق (samordningsnummer)؟",
+  "input.ignored_notifications.label": "الإشعارات التي تم تجاهلها",
+  "input.ignored_notifications.placeholder": "الإشعارات التي تم تجاهلها",
   "input.interests.hint": "يرجى تقييم مدى اهتمامك في الإهتمامات التي تم اختيارها",
   "input.interests.label": "الإهتمامات",
   "input.interests.placeholder": "الإهتمامات",
-  "input.job.digest.notification.frequency.label": "How often do you want to be notified of new jobs?",
-  "input.job.digest.notification.frequency.placeholder": "Notification Frequency",
+  "input.job.digest.notification.frequency.label": "كم مرة تريد أن يتم إعلامك بوظائف جديدة؟",
+  "input.job.digest.notification.frequency.placeholder": "تردد الإشعارات",
   "input.job.experience.label": "خبرة سنوات العمل",
   "input.job.experience.placeholder": "خبرة سنوات العمل",
   "input.languages.hint": "يرجى تقييم نفسك في أداء اللغات المختارة",
@@ -237,7 +239,7 @@
   "input.personal.id.label": "رقم الهوية الشخصي",
   "input.phone.label": "هاتف",
   "input.phone.placeholder": "هاتف",
-  "input.primary.occupations.label": "Choose occupations that you are interested in",
+  "input.primary.occupations.label": "اختيار المهن التي كنت مهتما بها",
   "input.repeat.password.label": "تكرار كلمة المرور",
   "input.repeat.password.placeholder": "تكرار كلمة المرور",
   "input.residence.permit.back.description": "تحميل الصورة الخلفية لتصريح الإقامة",
@@ -278,33 +280,33 @@
   "job.actions.header.applied": "قدّمت على الوظيفة",
   "job.actions.header.apply": "قدّم على الوظيفة",
   "job.actions.header.confirm": "قبول عرض",
-  "job.actions.header.hired": "You have been employed",
+  "job.actions.header.hired": "لقد تم توظيفك",
   "job.actions.header.login": "تسجيل الدخول للتقدم للوظيفة",
   "job.actions.header.offer": "لقد تلقيت عرضا للقيام بهذه الوظيفة. أجب خلال {{hours}} ساعات و {{minutes}} دقيقة.",
   "job.actions.header.performed": "تم أداء الوظيفة",
   "job.actions.header.register": "إنشاء حساب",
   "job.actions.section.applied": "قدّمت على الوظيفة",
   "job.actions.section.apply": "التسجيل",
-  "job.actions.section.closed.for.applications": "Closed for applications",
+  "job.actions.section.closed.for.applications": "مغلق للطلبات",
   "job.actions.section.confirm": "قبول عرض",
-  "job.actions.section.hired": "You have been employed",
+  "job.actions.section.hired": "لقد تم توظيفك",
   "job.actions.section.login": "تسجيل الدخول للتقدم للوظيفة",
   "job.actions.section.offer": "لقد تلقيت عرضا للقيام بهذه الوظيفة. أجب خلال {{hours}} ساعات و {{minutes}} دقيقة.",
   "job.actions.section.performed": "تم أداء الوظيفة",
   "job.actions.section.read.more": "اقرأ المزيد عن",
   "job.actions.section.register": "إنشاء حساب",
-  "job.actions.section.rejected": "Unfortunately, someone else got the job",
+  "job.actions.section.rejected": "لسوء الحظ، شخص آخر حصل على الوظيفة",
   "job.actions.section.withdrawn": "تم سحب طلبك",
   "job.additional.user.info.modal.button": "أكمل",
   "job.additional.user.info.modal.title": "لزيادة فرصتك للحصول على هذه الوظيفة يرجى النظر في توفير المعلومات التالية",
   "job.applicant.section.title": "انت ",
-  "job.banner.preview": "This is a preview",
+  "job.banner.preview": "هذه معاينة",
   "job.card.applied": "قدّمت على الوظيفة",
-  "job.card.closed.for.applications": "Closed",
+  "job.card.closed.for.applications": "مغلق",
   "job.card.currency.per.hour": "{{currency}} / الساعة\n",
-  "job.card.filled": "Filled",
+  "job.card.filled": "معبأ",
   "job.card.full.time": "دوام كامل",
-  "job.card.hired": "You have been employed",
+  "job.card.hired": "لقد تم توظيفك",
   "job.card.hours": "{{hours}} الساعات",
   "job.card.offered": "Job offered to you",
   "job.card.part.time": "دوام جزئي",
@@ -335,7 +337,6 @@
   "job.important.information.section.salary.per.hour": "{{grossSalaryPerHour}} gross salary",
   "job.important.information.section.salary.title": "المرتب",
   "job.important.information.section.title": "معلومات هامة",
-  "job.important.information.section.total.salary": "{{totalGrossSalary}} total salary ({{totalNetSalary}} after tax)",
   "job.information.section.header": "معلومات",
   "job.location.section.header": "الموقع",
   "job.recruiter.section.title": "Responsible recruiter",
@@ -384,7 +385,7 @@
   "menu.main.home": "منزل",
   "menu.main.login": "تسجيل الدخول",
   "menu.main.logout": "تسجيل الخروج",
-  "menu.main.my_assignment": "My Applications",
+  "menu.main.my_assignment": "طلباتي",
   "menu.main.profile": "صفحة معلومات شخصية",
   "menu.main.register": "إنشاء حساب",
   "menu.main.subscriptions": "Job subscriptions",
@@ -401,7 +402,7 @@
   "meta.error.description": "معذرة، حدث خطأ... لكن لا تقلق، نحن نقوم بإصلاحه!",
   "meta.error.title": "Error",
   "meta.faq.description": "We have collected a number of commonly asked questions and information regarding our service that we want to share with you.",
-  "meta.faq.title": "FAQ",
+  "meta.faq.title": "التعليمات",
   "meta.forbidden.description": "عذرا، لا يسمح لك بتنفيذ هذا الإجراء.",
   "meta.forbidden.title": "ممنوع",
   "meta.forgot.password.description": "If you have lost or forgot your password it is easy to change it and get access to your account back.",
@@ -413,7 +414,7 @@
   "meta.job.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labour market.",
   "meta.job.title": "Apply now",
   "meta.jobs.description": "Now is the time to begin job searching! Apply for any and as many jobs you want! Don’t forget to sign in often to see if we have posted any new jobs!",
-  "meta.jobs.title": "Get the experience you need to enter the Swedish labour market",
+  "meta.jobs.title": "احصل على الخبرة التي تحتاجها لدخول سوق العمل السويدي",
   "meta.login.description": "Login now and apply to our jobs!",
   "meta.login.title": "تسجيل دخول ",
   "meta.lost.connection.description": "عذرا، يبدو أنك فقدت الاتصال بالخادم. ربما اتصال الإنترنت الخاص بك مقطوع أو الخادم غير متصل.",
@@ -469,7 +470,7 @@
   "sort.users.input.option.newest": "Newest",
   "sort.users.input.option.oldest": "Oldest",
   "stepper.modal.next.button": "التالي",
-  "stepper.modal.previous.button": "Previous",
+  "stepper.modal.previous.button": "السابق",
   "subscribe.new.bottom_jobs_page_title": "Get notified when new jobs are posted",
   "subscribe.new.title": "New subscription",
   "subscribe.title": "Job subscriptions",
