:hocho: typo in en translation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -399,7 +399,7 @@
   "meta.404.title": "Not found",
   "meta.applications.description": "Here you can see your job applications and their current status",
   "meta.applications.title": "Your applications",
-  "meta.contact.description": "If you have any questions or feedback feel free to contact you and we will be in touch as soon as we can.",
+  "meta.contact.description": "If you have any questions or feedback feel free to contact us and we will be in touch as soon as we can.",
   "meta.contact.title": "Contact us",
   "meta.cookies.about.description": "We use cookies for technical reasons to simplify the use of our services and to give you the user more relevant information when your visit our website. Cookies are also used to measure traffic to our website, for the collection of data and to improve our services. By using our services, you accept that we use cookies, as long as you have not disabled them in your cookies settings in your web browser.",
   "meta.cookies.about.title": "Cookies",
