Pull translations from Transifex

--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -1,10 +1,4 @@
 {
-  "guide.card.welcome.item.1.title": "Innan du söker jobb",
-  "guide.card.welcome.item.1.paragraph": "Vad behöver du för att jobba i Sverige?",
-  "guide.card.welcome.item.2.title": "Hur du söker jobb",
-  "guide.card.welcome.item.2.paragraph": "Tips på hur du hittar jobb, hur du skriver ett CV och vad du ska tänka på när du skriver på ett kontrakt.",
-  "guide.card.welcome.item.3.title": "På jobbet",
-  "guide.card.welcome.item.3.paragraph": "Praktisk information om vad du kan förvänta dig när du börja jobba.",
   "already.registered.modal.button": "Logga in",
   "already.registered.modal.info": "Det verkar som att det redan finns ett konto som använder {{emailOrPhone}}, så vi föreslår att du loggar in istället. Om du glömt ditt lösenord så kan du återställa det genom att klicka på \"Glömt ditt lösenord?\" ovan",
   "already.registered.modal.title": "{{emailOrPhone}} är redan registrerat",
@@ -26,9 +20,9 @@
   "assignment.hours": "Timmar",
   "assignment.rate.gross_salary": "bruttolön",
   "back.to.jobs.section.link": "Hitta fler jobb",
+  "basic_user.data.tab_title": "Grundläggande",
   "basic.chat.messages.empty": "Inga meddelanden ännu",
   "basic.comments.empty": "Inga kommentarer ännu",
-  "basic_user.data.tab_title": "Grundläggande",
   "button.form.submit.fail": "Det finns några fel du måste åtgärda ovan.",
   "button.form.submit.success": "Det gick bra!",
   "card.document.upload.empty.documents": "Tomt",
@@ -111,6 +105,12 @@
   "god.mode.title": "{{numberOfUsers}} Användare",
   "guide.card.welcome.button": "Starta",
   "guide.card.welcome.faded.title": "Jobbguide",
+  "guide.card.welcome.item.1.paragraph": "Vad behöver du för att jobba i Sverige?",
+  "guide.card.welcome.item.1.title": "Innan du söker jobb",
+  "guide.card.welcome.item.2.paragraph": "Tips på hur du hittar jobb, hur du skriver ett CV och vad du ska tänka på när du skriver på ett kontrakt.",
+  "guide.card.welcome.item.2.title": "Hur du söker jobb",
+  "guide.card.welcome.item.3.paragraph": "Praktisk information om vad du kan förvänta dig när du börja jobba.",
+  "guide.card.welcome.item.3.title": "På jobbet",
   "guide.card.welcome.paragraph.1": "Är du ny i Sverige och inte säker på vad du ska göra när du söker jobb? I den här guiden har vi samlat information, samt tips och tricks som kommer hjälpa dig.",
   "guide.card.welcome.paragraph.2": "Guiden består av 3 delar:",
   "guide.card.welcome.title": "Välkommen till jobbguiden",
@@ -185,7 +185,11 @@
   "input.email.label": "E-post",
   "input.email.or.phone.label": "Email eller telefonnummer",
   "input.email.or.phone.placeholder": "Email eller telefonnummer",
+  "input.email.or.phone.suggestion.hint": "Did you mean {{email}}?",
+  "input.email.or.phone.suggestion.link": "Click here to use this email",
   "input.email.placeholder": "E-post",
+  "input.email.suggestion.hint": "Did you mean {{email}}?",
+  "input.email.suggestion.link": "Click here to use this email",
   "input.facebook.url.label": "Länk till din facebook profil",
   "input.facebook.url.placeholder": "Facebook profil",
   "input.filter.jobs.label": "Filtrera på",
@@ -319,8 +323,8 @@
   "job.company.description.section.title": "Kort om {{company}}",
   "job.description.section.header": "Beskrivning",
   "job.description.section.title": "Om jobbet",
-  "job.digest.form.city.hint": "Välj en eller flera städer för att ett relevant urval",
   "job.digest.form.city.add": "Lägg till stad",
+  "job.digest.form.city.hint": "Välj en eller flera städer för att ett relevant urval",
   "job.digest.form.delete.button": "Ta bort",
   "job.digest.form.info": "Skrolla ner för att se dina aktiva prenumerationer",
   "job.digest.form.max.cities": "Du kan inte lägga till fler städer",
@@ -388,14 +392,14 @@
   "menu.main.my_assignment": "Mina Ansökningar",
   "menu.main.profile": "Profil",
   "menu.main.register": "Skapa konto",
-  "menu.main.subscriptions": "Jobbmail",
   "menu.main.staffing_time_report": "Tidsrapportera",
+  "menu.main.subscriptions": "Jobbmail",
   "menu.main.support.chat": "Chatta med Just Arrived",
   "meta.404.description": "Sidan eller resursen du söker kunde inte hittas",
   "meta.404.title": "Hittades inte",
   "meta.applications.description": "Här kan du se dina jobbansökningar och deras nuvarande status",
   "meta.applications.title": "Dina ansökningar",
-  "meta.contact.description": "Om du har några frågor eller feedback så får du gärna kontakta oss och så kommer vi höra av oss till dig så snart som möjligt.",
+  "meta.contact.description": "If you have any questions or feedback feel free to contact us and we will be in touch as soon as we can.",
   "meta.contact.title": "Kontakta oss",
   "meta.cookies.about.description": "Vi använder cookies av tekniska skäl, för att underlätta användningen av våra tjänster och för att ge dig som användare relevant information när du besöker vår webbplats. Cookies används även för att mäta trafiken på vår webbplats, för insamling av statistik och för att förbättra våra tjänster. Genom att använda våra tjänster godkänner du att vi använder cookies, såvida du inte har inaktiverat dessa genom att ändra inställningarna för cookies i din webbläsare.",
   "meta.cookies.about.title": "Cookies",
