--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -185,11 +185,11 @@
   "input.email.label": "E-post",
   "input.email.or.phone.label": "Email eller telefonnummer",
   "input.email.or.phone.placeholder": "Email eller telefonnummer",
-  "input.email.or.phone.suggestion.hint": "Did you mean {{email}}?",
-  "input.email.or.phone.suggestion.link": "Click here to use this email",
+  "input.email.or.phone.suggestion.hint": "Menade du {{email}}?",
+  "input.email.or.phone.suggestion.link": "Klicka här för att använda den här emailadressen",
   "input.email.placeholder": "E-post",
-  "input.email.suggestion.hint": "Did you mean {{email}}?",
-  "input.email.suggestion.link": "Click here to use this email",
+  "input.email.suggestion.hint": "Menade du {{email}}?",
+  "input.email.suggestion.link": "Klicka här för att använda den här emailadressen",
   "input.facebook.url.label": "Länk till din facebook profil",
   "input.facebook.url.placeholder": "Facebook profil",
   "input.filter.jobs.label": "Filtrera på",
@@ -399,7 +399,7 @@
   "meta.404.title": "Hittades inte",
   "meta.applications.description": "Här kan du se dina jobbansökningar och deras nuvarande status",
   "meta.applications.title": "Dina ansökningar",
-  "meta.contact.description": "If you have any questions or feedback feel free to contact us and we will be in touch as soon as we can.",
+  "meta.contact.description": "Om du har några frågor eller feedback så får du gärna kontakta oss och så kommer vi höra av oss till dig så snart som möjligt.",
   "meta.contact.title": "Kontakta oss",
   "meta.cookies.about.description": "Vi använder cookies av tekniska skäl, för att underlätta användningen av våra tjänster och för att ge dig som användare relevant information när du besöker vår webbplats. Cookies används även för att mäta trafiken på vår webbplats, för insamling av statistik och för att förbättra våra tjänster. Genom att använda våra tjänster godkänner du att vi använder cookies, såvida du inte har inaktiverat dessa genom att ändra inställningarna för cookies i din webbläsare.",
   "meta.cookies.about.title": "Cookies",
